--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3503,7 +3503,7 @@ tbody.collapse.in {
 }
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #4aca85;
 }
 
 .nav-stacked > li {
