--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1136,12 +1136,16 @@ input[type="text"] {
   display: block;
 }
 
-.mid-private-form, .mid-business-form {
+.mid-subscribe-form {
   margin-top: 10px;
   text-align: left;
 }
 
-.mid-private-form, .mid-business-form .form-text {
+.hide {
+  display: none;
+}
+
+.mid-subscribe-form, .form-text {
   font-size: 10px;
 }
 
