--- a/html/css/style.css
+++ b/html/css/style.css
@@ -476,7 +476,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: block; }
   .mid-work-featured .mobile-wrap .mobile-img {
     background-position: top;
-    height: 810px;
+    padding-bottom: 180%;
     -webkit-box-shadow: 0px 3px 38px -13px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 3px 38px -13px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 3px 38px -13px rgba(0, 0, 0, 0.2);
